--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <div class="container">
       <header class="heading">
-        <h1>Agenda Ahead !</h1>
+        <h1>Taskly !</h1>
       </header>
       <div class="input-container">
         <input type="text" id="task-input" placeholder="Add a new task" />
